v3d: transform feedback issue
Hi, When I run gles3 test for RPI4, I found that: case dEQP-GLES3.functional.transform_feedback.position.points_interleaved failed in mesa 19.3.0 but succeed in mesa 19.0.0. It seems that revert commit 0f2d1dfe will fix this issue.
There are also other failed transform feedback case which is caused by this commit.
I test this on weston Raspbian RPI4.